What's New for OpenJPEG

* : fixed
- : removed
! : changed
+ : added

October 17, 2010
- [szukw000] doc/man/ : directory removed
! [szukw000]
	configure.ac : 'enable_shared' YES by default
	doc/Makefile.am :
		'all-local' and 'install-data-hook' added
		'with_doxygen' conditional added
	Makefile.am : 'doc' directory no longer substituted in SUBDIRS

	to link binaries statically: '-static' added to:
		codec/Makefile.am
		mj2/Makefile.am
		jpwl/Makefile.am
		jp3d/codec/Makefile.am

	mj2/Makefile.am : 'with_libjpwl' removed
	mj2/Makefile.nix : 'with_libjpwl' removed

	config.nix : 'WITH_JPWL', 'WITH_JP3D' added
	doc/Makefile.nix : 'clean', 'install', 'uninstall' added
	Makefile.nix : 'WITH_JPWL', 'WITH_JP3D' added

	INSTALL : topic 3) changed regarding the changes in 'config.nix'

October 13, 2010
! [szukw000] 
	configure.ac
	bootstrap.sh

	'with_libjpwl' removed from:
		libopenjpeg/Makefile.am
		codec/Makefile.am
		codec/Makefile.nix
		Makefile.nix

October 10, 2010
* [antonin] Patch from winfried

				1. The jp3d/libjp3dvm/Makefile.am has been changed:

				Installing: /usr/local/TEST_CONFIG/include/openjpeg3d-1.3/
				Installing: /usr/local/TEST_CONFIG/include/openjpeg3d-1.3/openjpeg3d.h

				PREFIX/include:

					 23  openjpeg.h -> openjpeg-1.4/openjpeg.h
					 27  openjpeg3d.h -> openjpeg3d-1.3/openjpeg3d.h

				28773  openjpeg-1.4/openjpeg.h
				22158  openjpeg3d-1.3/openjpeg3d.h
					
				2. The jp3d/Makefile.nix has been changed respectivly.
					
				3. The mj2/Makefile.nix contained a wrong path to 'compat/'
					
				4. opj_config.h.in.user contained a comment within a comment.
					
				5. 'autoreconf' reported that AC_PROG_RANLIB is no longer
					necessary in 'configure.ac'.

October 08, 2010
* [antonin] fixed a bug in mj2.c that prevented extract_j2k_from_mj2 to build properly. Patch from winfried.

October 04, 2010
+ [antonin] Added files to let people build openjpeg with 'configure' tools